argocd-apps-deprecated/k8s-rpi-apps-ingresses/invidious-ingress/invidious-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: invidious-ingress
  namespace: invidious
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<invidioushostname>.<domainname>`)
    kind: Rule
    services:
    - name: invidious
      port: 3000
